--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                         <li>Achievements mentioned must be <strong>recent</strong>.</li>
                         <li>The <strong>last date for submission is 4th December 2025</strong>. Incomplete or late submissions will not be considered.</li>
                         <li>The decision of the Career Uttsav Jury regarding the selection of deserving winners will be <strong>final</strong>.</li>
-                        <li>All shortlisted nominees must be present at the venue at least <strong>45 minutes before</strong> their allotted time slot.</li>
+                        <li>All shortlisted nominees must be present at the venue at least <strong>45 minutes before</strong> their allotted time slot. The student must be accompanied by either their parent or teacher.<strong>ID Card is a MUST. <strong></strong></strong></li>
                         <li>For any further details, please contact the Career Uttsav Team at 📞 <strong>+91-9035150139</strong> or ✉️ <strong>info@careeruttsav.in</strong></li>
                     </ol>
                 </div>
